--- a/sass/elements/_tables.scss
+++ b/sass/elements/_tables.scss
@@ -2,3 +2,12 @@ table {
 	margin: 0 0 1.5em;
 	width: 100%;
 }
+
+table,
+th,
+tr,
+td {
+	border: 1px solid #000;
+	border-collapse: collapse;
+	padding: .5em;
+}
